# climb-center-manager

./: .editorconfig  .env.example  .gitattributes  .gitignore  .release-payload.json  README.md  SECURITY.md  index.html  latest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.json
docs/: RELEASE_CHECKLIST.md  SUPABASE_CHECK_QUERIES.md
mobile/: .env.example  README.md  app.json  eas.json  package-lock.json  package.json
mobile/app/: _layout.tsx  index.tsx  login.tsx
mobile/src/: types.ts
scripts/: build-with-updater.ps1  create-desktop-shortcut.ps1  deploy-desktop.ps1  fix-korean-ui.js  process-grabon-branding.ps1  publish-latest-json.ps1  reset-local-data.ps1  start-app.ps1  verify-logins.ps1
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  commands.rs  db.rs  lib.rs  main.rs  models.rs  reports.rs
src-tauri/src/db/: address.rs  attendance_ext.rs  diagnostic.rs  ensure_schema.rs  locker.rs  member_edit_log.rs  member_filter.rs  migration.rs  mod.rs  ops.rs  pull_import.rs  safe_sync.rs  status.rs  sync_local.rs  test_data.rs
src/api/: client.ts
src/components/: AttendanceCalendar.tsx  AttendanceCheckPanel.tsx  ExpiringPanel.tsx  GrabonLogo.tsx  Header.tsx  LockerManagementPanel.tsx  LoginPanel.tsx  LoginScreen.tsx  MainNav.tsx  MemberDetailPanel.tsx  MemberFormModal.tsx  MemberList.tsx  MemberRosterPanel.tsx  (+7 more)
supabase/: config.toml  seed.sql
updater/: latest.json.example  latest.v1.0.16.no-bom.json
(+88 files in other folders)
