[package]
name = "climb-center-manager"
version = "1.0.74"
description = "?占쎈씪?占쎈컢 ?占쏀꽣 ?占쎌썝愿占??占쎈줈洹몃옩"
authors = ["you"]
edition = "2021"

[lib]
name = "climb_center_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
